maze/errors.txt
MazeGame.java:49: error: cannot find symbol
	gameBoard.setRoom(0,true, true , true, false, false, false,false); // setup the first room 
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:50: error: cannot find symbol
	gameBoard.setRoom(0,true);  // place the player in the first room
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:52: error: cannot find symbol
	gameBoard.setRoom(1,true,false, true, true,false,true, false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:54: error: cannot find symbol
	gameBoard.setRoom(2, false, false,true,true, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:56: error: cannot find symbol
	gameBoard.setRoom(3, false, true ,true,false, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:58: error: cannot find symbol
	gameBoard.setRoom(4, true, true ,false,false, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:60: error: cannot find symbol
	gameBoard.setRoom(5, true, false ,true,false, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:62: error: cannot find symbol
	gameBoard.setRoom(6, false, false ,true,true, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:64: error: cannot find symbol
	gameBoard.setRoom(7, false, true ,false,false, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:66: error: cannot find symbol
	gameBoard.setRoom(8, true, false ,false,true, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:68: error: cannot find symbol
	gameBoard.setRoom(9, false, true ,false,true, false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:70: error: cannot find symbol
	gameBoard.setRoom(10, true, true ,true, false, true, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:72: error: cannot find symbol
	gameBoard.setRoom(11, true, true ,false, false,false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:74: error: cannot find symbol
	gameBoard.setRoom(12, true, false ,true, true ,false, false,true);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:76: error: cannot find symbol
	gameBoard.setRoom(13, false, true , false, true ,false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:78: error: cannot find symbol
	gameBoard.setRoom(14, true, false , false, true ,false, false,false);
	^
  symbol:   variable gameBoard
  location: class MazeGame
MazeGame.java:80: error: cannot find symbol
	gameBoard.setRoom(15, false, true , false, true ,false, false,false);	
	^
  symbol:   variable gameBoard
  location: class MazeGame
17 errors
